--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ responsive which creates another point of inaccessibiltiy for users who might on
                     Hours & Locations: on click → scrolls to Hours & Locations section at the bottom
                     Order Online: on click —> navigates to Doordash order page
                     Menu: on click —> navigates to pdf with menu and prices
+                VIEW ON MAP BUTTONS:
+                I included 2 buttons in the hours and locations seciton that on click take you to directions to the 2 restaurant locations
                 </p>
             
             This establishes a clear palette and good contrast for accessibility. The buttons right at the top
